--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -6,7 +6,7 @@ on:
   watch:
     types: started
   schedule:
-    - cron: 35 3 4 * *
+    - cron: 38 4 * * * 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
